<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disco Wormhole</string>
    <string name="description">Fly through space like a disco queen!</string>
    <string name="settings_title">Disco Wormhole Settings</string>
    <string name="settings_summary">This is the configuration station</string>
    <string name="particle_stretch_x_title">Particle Stretch Sideways</string>
    <string name="particle_stretch_x_summary">Known to rupture\nthe space-time continuum</string>
    <string name="particle_stretch_y_title">Particle Stretch Longways</string>
    <string name="particle_stretch_y_summary">Adjust the level of ludicrous</string>
    <string name="flight_speed_title">Flight Speed</string>
    <string name="flight_speed_summary">The speed of the wormhole</string>
    <string name="particle_speed_title">Particle Speed</string>
    <string name="particle_speed_summary">The speed of the particles</string>
    <string name="num_rings_title">Number of rings in the wormhole</string>
    <string name="num_rings_summary">Decrease the number of rings\nto improve performance</string>
    <string name="background_color_title">Background Color</string>
    <string name="colors_title">Particle Colors</string>
    <string name="colors_summary">Choose the particles\' colors</string>
    <string name="colors_confirm">Set Color</string>
    <string name="color_one">Color One</string>
    <string name="color_two">Color Two</string>
    <string name="color_three">Color Three</string>
    <string name="single_space"></string>

</resources>