<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:key="disco_wormhole_settings" >

    <com.adamantine.discowormhole.and.AdPreference android:layout="@layout/ad_layout" />

    <Preference
        android:key="title"
        android:summary="@string/settings_summary"
        android:title="@string/settings_title" />

    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="50"
        android:key="flight_speed"
        android:max="100"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/flight_speed_summary"
        android:title="@string/flight_speed_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="%" />
    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="30"
        android:key="num_rings"
        android:max="40"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/num_rings_summary"
        android:title="@string/num_rings_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="" />
    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="50"
        android:key="particle_speed"
        android:max="100"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/particle_speed_summary"
        android:title="@string/particle_speed_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="%" />

    <Preference
        android:summary="@string/colors_summary"
        android:title="@string/colors_title" >
    </Preference>
    <Preference
        android:defaultValue="blah"
        android:key="color_one"
        android:title="@string/color_one" >
    </Preference>
    <Preference
        android:defaultValue="blah"
        android:key="color_two"
        android:title="@string/color_two" >
    </Preference>
    <Preference
        android:defaultValue="blah blah"
        android:key="color_three"
        android:title="@string/color_three" >
    </Preference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_space_dust"
        android:title="@string/use_space_dust_title" />

    <Preference
        android:key="spacer"
        android:title="@string/single_space" />
    <Preference>
    </Preference>

</PreferenceScreen>